--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ title: "Jorge Mesa Marrero — CV & Repos"
         <img src="assets/img/perfil.jpg" alt="Foto de perfil">
         <div class="bio">
           <p class="muted" style="margin:0">
-            Escribe aquí 3–4 líneas: qué estás aprendiendo, qué te gusta, en qué quieres mejorar.
+            I am a DAM student, passionate about programming, system administration, and technical documentation.
+Currently, I am focusing on key areas of software development.
           </p>
           <div class="pillrow">
             <span class="pill">Java</span>
@@ -43,7 +44,8 @@ title: "Jorge Mesa Marrero — CV & Repos"
 
         <h3 style="margin:16px 0 10px">Objetivo</h3>
         <p class="muted" style="margin:0">
-          Ejemplo: “Busco prácticas y mejorar en backend con Java/Spring y bases de datos.”
+          To keep growing as a developer, consolidating my knowledge in programming, databases, and application design.
+I enjoy documenting my learning process and sharing it with the community.
         </p>
       </div>
     </div>
@@ -58,7 +60,7 @@ title: "Jorge Mesa Marrero — CV & Repos"
   </section>
 
   <section class="section">
-    <h2>Mis repositorios</h2>
+    <h2>My repositories</h2>
     <div class="toolbar">
       <input id="q" class="input" placeholder="Buscar repositorios..." />
       <select id="sort" class="select">
@@ -78,7 +80,7 @@ title: "Jorge Mesa Marrero — CV & Repos"
 </div>
 
 <script>
-  const GITHUB_USERNAME = "TUUSUARIO"; // <- CAMBIA ESTO
+  const GITHUB_USERNAME = "jmesmarrero"; // <- CAMBIA ESTO
   const FEATURED_TOPIC = "showcase";
   let allRepos = [];
   let activeTopic = "all";
