cambio en index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: "Jorge Mesa Marrero — CV & Repos"
   <header class="topbar">
     <div>
       <h1 class="title">Jorge Mesa Marrero</h1>
-      <div class="subtitle">Estudiante de Desarrollo de Aplicaciones Multiplataforma (1º DAM)</div>
+      <div class="subtitle">Student of Multiplatform Application Development (1º DAM)</div>
     </div>
     <nav style="display:flex;gap:10px">
       <a class="btn" href="https://www.linkedin.com/in/jmesmarrero" target="_blank">LinkedIn</a>
