--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: "Jorge Mesa Marrero — CV & Repos"
   </header>
 
   <section class="section">
-    <h2>Sobre mí</h2>
+    <h2>About me</h2>
     <div class="grid2">
       <div class="profile">
         <img src="assets/img/perfil.jpg" alt="Foto de perfil">
