--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@ title: "Jorge Mesa Marrero — CV & Repos"
     </nav>
   </header>
 
-  <section class="section">
+  <section class="section section-about">
     <h2>About me</h2>
     <div class="grid2">
       <div class="profile">
-        <img src="assets/img/perfil.jpg" alt="Foto de perfil">
+        <div class="profile-img-wrap">
+          <img src="assets/img/perfil.png" alt="Foto de perfil">
+        </div>
         <div class="bio">
           <p class="muted" style="margin:0">
             I am a DAM student, passionate about programming, system administration, and technical documentation.
