--- a/index.html
+++ b/index.html
@@ -18,38 +18,37 @@ title: "Jorge Mesa Marrero — CV & Repos"
 
   <section class="section section-about">
     <h2>About me</h2>
-    <div class="grid2">
-      <div class="profile">
-        <div class="profile-img-wrap">
-          <img src="assets/img/perfil.png" alt="Foto de perfil">
-        </div>
-        <div class="bio">
-          <p class="muted" style="margin:0">
-            I am a DAM student, passionate about programming, system administration, and technical documentation.
-Currently, I am focusing on key areas of software development.
-          </p>
-          <div class="pillrow">
-            <span class="pill">Java</span>
-            <span class="pill">SQL</span>
-            <span class="pill">HTML/CSS</span>
-            <span class="pill">Git</span>
-          </div>
-        </div>
+    <div class="about-layout">
+
+      <div class="about-photo-col">
+        <img src="assets/img/perfil.png" alt="Foto de perfil" class="about-photo">
       </div>
 
-      <div>
-        <h3 style="margin:0 0 10px">Experiencia / Proyectos de clase</h3>
-        <ul class="muted" style="margin:0;padding-left:18px">
-          <li>Proyecto DAM: “App de Notas” (CRUD + BBDD)</li>
-          <li>Proyecto Java: “Gestor de tareas” (POO + tests)</li>
+      <div class="about-content">
+        <p class="muted" style="margin:0 0 14px">
+            I am a DAM student, passionate about programming, system administration, and technical documentation.
+Currently, I am focusing on key areas of software development.
+        </p>
+        <div class="pillrow" style="margin-bottom:20px">
+          <span class="pill">Java</span>
+          <span class="pill">SQL</span>
+          <span class="pill">HTML/CSS</span>
+          <span class="pill">Git</span>
+        </div>
+
+        <h3 style="margin:0 0 8px">Experiencia / Proyectos de clase</h3>
+        <ul class="muted" style="margin:0 0 16px;padding-left:18px">
+          <li>Proyecto DAM: "App de Notas" (CRUD + BBDD)</li>
+          <li>Proyecto Java: "Gestor de tareas" (POO + tests)</li>
         </ul>
 
-        <h3 style="margin:16px 0 10px">Objetivo</h3>
+        <h3 style="margin:0 0 8px">Objetivo</h3>
         <p class="muted" style="margin:0">
           To keep growing as a developer, consolidating my knowledge in programming, databases, and application design.
 I enjoy documenting my learning process and sharing it with the community.
         </p>
       </div>
+
     </div>
   </section>
 
