--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ Currently, I am focusing on key areas of software development.
           <span class="pill">Git</span>
         </div>
 
-        <h3 style="margin:0 0 8px">Experiencia / Proyectos de clase</h3>
+        <h3 style="margin:0 0 8px">Experience/Class projects</h3>
         <ul class="muted" style="margin:0 0 16px;padding-left:18px">
-          <li>Proyecto DAM: "App de Notas" (CRUD + BBDD)</li>
-          <li>Proyecto Java: "Gestor de tareas" (POO + tests)</li>
+          <li>In progress</li>
+          <li>Proyecto Java: "Gestión de Personas de un Centro Educativo" (OOP + Polymorphism + ArrayList + RegEx)</li>
         </ul>
 
         <h3 style="margin:0 0 8px">Objetivo</h3>
